fix menu align style to center and remove margin

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -239,11 +239,11 @@ section#gallary {
 #menu {
     display: flex;
     justify-content: center;
-    align-items: baseline;
+    align-items: center;
     flex-direction: column;
     width: 100%;
-    margin-left: 20px;
     padding: 20px;
+    background-color: rgba(0, 0, 0, 0.6);
 }
 
 /* to align menu elements aside from left size */
